<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".data.PosLogin"

    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/bem_vindo_adm"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.098" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/pontos_com_maquinas_j_instaladas"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/mapView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView"
        app:layout_constraintVertical_bias="0.835">

        <Button
            android:id="@+id/cadastroMaquina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/botaoredondo"
            android:drawableTop="@drawable/adicionar"
            android:text="@string/cadastrar_maquina"
            android:onClick="proximaTelaMaquina"
            android:textSize="12sp"
            android:layout_marginBottom="20dp"/>

        <Button

            android:id="@+id/cadastroPonto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/botaoredondo"
            android:drawableTop="@drawable/adicionar"
            android:onClick="proximaTelaPonto"
            android:text="@string/cadastrar_ponto"
            android:textSize="12sp" />

        <Button
            android:id="@+id/gerenciaDado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/botaoredondo"
            android:drawableTop="@drawable/pasta"
            android:text="@string/gerenciar_dados"
            android:onClick="proximaTelaGerenciarDados"
            android:textSize="12sp"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/controleVendas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/botaoredondo"
            android:drawableTop="@drawable/barraicon"
            android:text="@string/controle_de_vendas"
            android:textSize="12sp"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>